syntax = "proto3";

package indexer.block.v1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/initia-labs/kvindexer/submodules/block/types";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

// Block represents a indexed block in a blockchain
message Block {
  string chain_id = 1;
  int64 height = 2;
  string hash = 3;
  int64 block_time = 4;
  google.protobuf.Timestamp timestamp = 5
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  int64 gas_used = 6;
  int64 gas_wanted = 7;
  int64 tx_count = 8;
  repeated cosmos.base.v1beta1.Coin total_fee = 9 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  Proposer proposer = 10;
}

// Proposer represents the proposer of a block: for minitia, it is the L2
// operator
message Proposer {
  string moniker = 1;
  // actually minitias have no identity because they haven't MsgCreateValidator,
  // but we decided to keep this field for compatibility with L1
  string identity = 2;
  string operator_address =
      3; // [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
